udev 179
========
Bugfix for $name resolution, which broke at least some keymap handling.

udev 178
========
Bugfix for the firmware loading behavior with kernel modules which
try to load firmware in the module_init() path. The blocked event
runs into a timout now, which should allow the firmware to be loaded.

Bugfix for a wrong DEVNAME= export, which breaks at least the udev-acl
tool.

Bugfix for missing ID_ properties for GPT partitions.

The RUN+="socket:.." option is deprecated and should not be used. A warning
during rules parsing is printed now. Services which listen to udev events,
need to subscribe to the netlink messages with libudev and not let udev block
in the rules execution until the message is delivered.

udev 177
========
Bugfix for rule_generator instalation.

udev 176
========
The 'devtmpfs' filesystem is required now, udev will not create or delete
device nodes anymore, it only adjusts permissions and ownership of device
nodes and maintains additional symlinks.

A writable /run directory (ususally tmpfs) is required now for a fully
functional udev, there is no longer a fallback to /dev/.udev.

The default 'configure' install locations have changed. Packages for systems
with the historic / vs. /usr split need to be adapted, otherwise udev will
be installed in /usr and not work properly. Example configuration options
to install things the traditional way are in INSTALL.

The default install location of the 'udevadm' tool moved from 'sbin'
to /usr/bin. Some tools expect udevadm in 'sbin', a symlink to udevadm
needs to be manually created if needed, or --bindir=/sbin be specified.

The expected value of '--libexecdir=' has changed and must no longer contain
the 'udev' directory.

Kernel modules are now loaded directly by linking udev to 'libkmod'. The
'modprobe' tool is no longer executed by udev.

The 'blkid' tool is no longer executed from udev rules. Udev links
directly to libblkid now.
